--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             </li>
 
             <li>
-              <a href="#" class="portfolio-card" id="pc3">
+              <a href="https://online-store-sadiq.vercel.app/" class="portfolio-card" id="pc3">
                 
               </a>
             </li>
