--- a/index.html
+++ b/index.html
@@ -243,11 +243,11 @@
             </li>
 
             <li>
-              <a href="#" class="portfolio-card" id="pc2">
+              <a href="https://online-store-sadiq.vercel.app/" class="portfolio-card" id="pc2">
                 <div class="card-content">
 
                   <span class="btn2-link">
-                    <span>E-commerce Dashboard</span>
+                    <span><a href="https://online-store-sadiq.vercel.app/">E-commerce Dashboard</a></span>
                   </span>
 
                 </div>
@@ -255,7 +255,7 @@
             </li>
 
             <li>
-              <a href="https://online-store-sadiq.vercel.app/" class="portfolio-card" id="pc3">
+              <a href="#" class="portfolio-card" id="pc3">
                 
               </a>
             </li>
