update html and css

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
           <ul class="portfolio-list">
 
             <li>
-              <a href="#" class="portfolio-card" id="pc1">
+              <a href="https://online-store-sadiq.vercel.app/" class="portfolio-card" id="pc1">
                 <div class="card-content">
 
                   <span class="btn1-link">
@@ -243,11 +243,11 @@
             </li>
 
             <li>
-              <a href="https://online-store-sadiq.vercel.app/" class="portfolio-card" id="pc2">
+              <a href="#" class="portfolio-card" id="pc2">
                 <div class="card-content">
 
                   <span class="btn2-link">
-                    <span><a href="https://online-store-sadiq.vercel.app/">E-commerce Dashboard</a></span>
+                    <span>E-commerce Dashboard</span>
                   </span>
 
                 </div>
