--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             </li>
 
             <li>
-              <a href="#" class="portfolio-card" id="pc2">
+              <a href="https://online-store-dashboard.vercel.app/" class="portfolio-card" id="pc2">
                 <div class="card-content">
 
                   <span class="btn2-link">
