--- a/index.html
+++ b/index.html
@@ -255,8 +255,14 @@
             </li>
 
             <li>
-              <a href="#" class="portfolio-card" id="pc3">
-                
+              <a href="https://lasi-authentication-page-sadiq.vercel.app/" class="portfolio-card" id="pc3">
+                <div class="card-content">
+
+                  <span class="btn3-link">
+                    <span>Lasi</span>
+                  </span>
+
+                </div>
               </a>
             </li>
 
