--- a/index.html
+++ b/index.html
@@ -268,6 +268,13 @@
 
             <li>
               <a href="#" class="portfolio-card" id="pc4"></a>
+                <div class="card-content">
+
+                  <span class="btn4-link">
+                    <span></span>
+                  </span>
+
+                </div>
             </li>
 
           </ul>
