--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                 <div class="card-content">
 
                   <span class="btn4-link">
-                    <span></span>
+                    <span>Byond the brand</span>
                   </span>
 
                 </div>
