style.css update

--- a/index.html
+++ b/index.html
@@ -267,14 +267,16 @@
             </li>
 
             <li>
-              <a href="https://byond-brand.vercel.app/" class="portfolio-card" id="pc4"></a>
+              <a href="https://byond-brand.vercel.app/" class="portfolio-card" id="pc4">
                 <div class="card-content">
 
                   <span class="btn4-link">
-                    <span>Byond the brand</span>
+                    <span>Byond</span>
                   </span>
 
                 </div>
+              </a>
+                
             </li>
 
           </ul>
