--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
 
             <div class="wrapper">
 
-              <form action="" class="contact-form">
+              <form action="" class="contact-form" name="submit-to-google-sheet">
 
                 <input type="text" name="name" placeholder="Name" required class="contact-input">
 
@@ -518,6 +518,28 @@
     - custom js link
   -->
   <script src="./assets/js/script.js"></script>
+
+  <!-- 
+    Quote to gogglesheet
+   -->
+   <script>
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbwjF6mk5HO9WDdAmPhadAJLuIVNm-vYB3VdtFl43ypnGJp4qGOOJ4qK4D5DQMce3Am3/exec'
+    const form = document.forms['submit-to-google-sheet']
+    const msg = document.getElementById("msg")
+  
+    form.addEventListener('submit', e => {
+      e.preventDefault()
+      fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+        .then(response => {
+            msg.innerHTML = "Message sent successfully"
+            setTimeout(function(){
+                msg.innerHTML = ""
+            },5000)
+            form.reset()
+        })
+        .catch(error => console.error('Error!', error.message))
+    })
+    </script>
 
   <!-- 
     - ionicon link
