--- a/index.html
+++ b/index.html
@@ -190,10 +190,10 @@
             <h2 class="h2 section-title">I Develop Application that Help People</h2>
 
             <p class="section-text">
-              I am a front-end web developer. I can provide clean code and pixel perfect design. I also make the website more & more
-              interactive with web animations. 
-              I can provide clean code and pixel perfect design. And also responsive design which makes your website 
-              accessible to all users, regardless of their device.
+              I am a front-end web developer. I can provide clean code and pixel perfect design. Additionally I make the website more & more
+              interactive with web animations. And I also provide responsive design which makes your website accessible to all users, regardless of their device.
+              I am passionate about crafting seamless user experiences and innovative design to bring digital visions to life. 
+              
               
             </p>
 
@@ -401,7 +401,7 @@
 
             <div class="wrapper">
 
-              <form action="" class="contact-form" name="submit-to-google-sheet">
+              <form class="contact-form" name="submit-to-google-sheet">
 
                 <input type="text" name="name" placeholder="Name" required class="contact-input">
 
@@ -521,8 +521,9 @@
 
   <!-- 
     Quote to gogglesheet
-   -->
-   <script>
+  -->
+   
+  <script>
     const scriptURL = 'https://script.google.com/macros/s/AKfycbwjF6mk5HO9WDdAmPhadAJLuIVNm-vYB3VdtFl43ypnGJp4qGOOJ4qK4D5DQMce3Am3/exec'
     const form = document.forms['submit-to-google-sheet']
     const msg = document.getElementById("msg")
@@ -539,7 +540,8 @@
         })
         .catch(error => console.error('Error!', error.message))
     })
-    </script>
+  </script>
+  
 
   <!-- 
     - ionicon link
