--- a/index.html
+++ b/index.html
@@ -190,15 +190,15 @@
             <h2 class="h2 section-title">I Develop Application that Help People</h2>
 
             <p class="section-text">
-              I am a front-end web developer. I can provide clean code and pixel perfect design. Additionally I make the website more & more
-              interactive with web animations. And I also provide responsive design which makes your website accessible to all users, regardless of their device.
+              I am a front-end web developer. I can provide clean code and pixel perfect design. Additionally I make the website more
+              interactive with web animations. And I also provide responsive design which makes your website accessible to all users regardless of their device.
               I am passionate about crafting seamless user experiences and innovative design to bring digital visions to life. 
               
               
             </p>
 
             <p class="section-text">
-              I am also a cybersecurity expert. I conduct vulnerability and penetration test on networks. And I am also very sufficient 
+              I am also a cybersecurity specialist. I conduct vulnerability and penetration test on networks. And I am also very sufficient 
               in Python GUI.
             </p>
 
