--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
 
             <h2 class="hero-title">
               <span>Hello I'm</span>
-              <strong>Olayinka Abubakar</strong> Web Developer from Nigeria
+              <strong>Olayinka Abubakar</strong> Full-Stack Developer
             </h2>
 
             <p class="hero-text">
-              And also a Python Developer (GUI) and a Cybersecurity specialist
+              And also a Cybersecurity Expert specializing in <br>Python GUI Development
             </p>
 
             <div class="btn-group">
@@ -190,16 +190,17 @@
             <h2 class="h2 section-title">I Develop Application that Help People</h2>
 
             <p class="section-text">
-              I am a front-end web developer. I can provide clean code and pixel perfect design. Additionally I make the website more
-              interactive with web animations. And I also provide responsive design which makes your website accessible to all users regardless of their device.
-              I am passionate about crafting seamless user experiences and innovative design to bring digital visions to life. 
-              
+              I’m a full-stack web developer, incorporating robust security protocols, conducting meticulous 
+              vulnerability assessments, executing thorough penetration tests, and crafting Python-based 
+              graphical user interface (GUI) tools, all meticulously designed to elevate and fortify security practices.
               
             </p>
 
             <p class="section-text">
-              I am also a cybersecurity specialist. I conduct vulnerability and penetration test on networks. And I am also very sufficient 
-              in Python GUI.
+              I provide clean code and pixel perfect design. And I also provide responsive design which makes your website 
+              accessible to all users regardless of their device. Additionally I make the website more
+              interactive with web animations.
+              I am passionate about crafting seamless user experiences and innovative design to bring digital visions to life. 
             </p>
 
             <a href="#portfolio" class="btn btn-primary blue">View Portfolio</a>
