--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </li>
 
           <li>
-            <a href="./assets/My Resume.pdf" download class="btn btn-primary">Download CV</a>
+            <a href="./assets/Olayinka's CV.pdf" download class="btn btn-primary">Download CV</a>
           </li>
 
           
