--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 
             <div class="wrapper">
 
-              <form class="contact-form" name="submit-to-google-sheet">
+              <form class="contact-form" action="https://formsubmit.co/sadiqolayinka17@gmail.com" method="POST">
 
                 <input type="text" name="name" placeholder="Name" required class="contact-input">
 
