--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container">
 
       <a href="#">
-        <h1 class="logo">Soft -digitals</h1>
+        <h1 class="logo">Olayinka</h1>
       </a>
 
       <button class="nav-toggle-btn" aria-label="Toggle Menu" data-nav-toggle-btn>
