--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/logo-icon.png" type="image/svg+xml">
+  <link rel="shortcut icon" href="./assets/images/bg2.jpg" type="image/svg+xml">
 
   <!-- 
     - custom css link
