--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
         &copy; 2022 <a href="#" class="copyright-link">soft-digitals</a>. All Rights Reseverd
       </p>
 
-      <ul class="footer-list">
+      <!-- <ul class="footer-list">
         <li>
           <a href="#" class="footer-link">Terms & Condition</a>
         </li>
@@ -496,7 +496,7 @@
         <li>
           <a href="#" class="footer-link">Privacy Policy</a>
         </li>
-      </ul>
+      </ul> -->
 
     </div>
   </footer>
